AP-260 Fixed bug with IE10 and word-break in notification dialogs

--- a/src/Modules/UI/Dnn.PersonaBar.UI/admin/personaBar/css/main.css
+++ b/src/Modules/UI/Dnn.PersonaBar.UI/admin/personaBar/css/main.css
@@ -169,7 +169,7 @@ a.plainbtn {
     border-radius: 3px;
     color: #fff;
     display: none;
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
     #notification-dialog > p {
@@ -197,7 +197,7 @@ a.plainbtn {
     display: none;
     position: fixed;
     top: 30%;
-    word-break: break-word;
+    word-wrap: break-word;
 }
 
     #confirmation-dialog > p {
